# mch2022-badge-tests

./: .gitignore  .gitmodules  README.md  addr2line.sh  build.sh  export.sh  flash.sh  make_fpga.sh  monitor.sh
graphics_test/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
graphics_test/components/pax-clocks/: CMakeLists.txt
graphics_test/components/pax-clocks/include/: pax_clock.h
graphics_test/components/pax-clocks/src/: pax_clock.c
graphics_test/fpga/: Makefile  fpga_test.blif  fpga_test.h  fpga_test.txt  fpga_test.v  fpga_test_lcd.v  fpga_test_pins.pcf
graphics_test/main/: CMakeLists.txt  benchmark.c  clocks.c  countdown.c  el_tech_demo.c  fpga_tests.c  gimmekeyboard.c  html_test.cpp  mah pinoutz.txt  main.c  main.cpp  name_tag.c  png_tests.c  sample_menu.c  techdemo.c  text_tests.c
graphics_test/main/include/: fpga_lcd_bin.h  main.h  sample_menu.h  techdemo.h
