idf_component_register(
	SRCS
	"main.cpp"
	"sample_menu.c"
	
	"fpga_tests.c"
	"png_tests.c"
	"el_tech_demo.c"
	"name_tag.c"
	"html_test.cpp"
	"countdown.c"
	"gimmekeyboard.c"
	"benchmark.c"
	"text_tests.c"
	
	"mch2022-demo/techdemo.c"
	"mch2022-demo/sponsors.c"
	"mch2022-demo/images/anim_intro.c"

	INCLUDE_DIRS
	"include"
	"mch2022-demo"
	"mch2022-demo/images"
)